src/objects/Validation__c.object
<CustomObject>
    <fields>
        <fullName>Assumption__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Please check the box if key assumptions present in the model are reviewed.</inlineHelpText>
        <label>Assumption</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Calculation__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Please check the box if the calculation is checked for accuracy and adherence to intended calculation structure.</inlineHelpText>
        <label>Calculation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Data_Inputs__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Please check the box if data inputs of the model is verified and data source is reviewed.</inlineHelpText>
        <label>Data Inputs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Executive_Acknowledgement__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Please check the box if the executive sponsor of the model signed off on model validation results to ensure all model limitations and disclosures are available when senior leadership is reviewing model results.</inlineHelpText>
        <label>Executive Acknowledgement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Model_Architecture__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Please check the box if the architecture connecting model components is checked for performance adhering to expectations.</inlineHelpText>
        <label>Model Architecture</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Model_Results__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Please check this box if model results are compared to control totals to ensure end results are reliable for decision making.</inlineHelpText>
        <label>Model Results</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Model_Reviewer__c</fullName>
        <inlineHelpText>Please fill in the reviewer of the model.</inlineHelpText>
        <label>Model Reviewer</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_of_Validation__c</fullName>
        <inlineHelpText>Please indicate the reason of performing this model validation. It can be regular model management process or event-driven model review.</inlineHelpText>
        <label>Reason of Validation</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Remediation__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Please check the box if model remediation is identified and established.</inlineHelpText>
        <label>Remediation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Results_of_Validation__c</fullName>
        <inlineHelpText>Please specify the results of the model validation.</inlineHelpText>
        <label>Results of Validation</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Reviewer_Qualifications__c</fullName>
        <inlineHelpText>Please fill in the qualifications of the model reviewer.</inlineHelpText>
        <label>Reviewer Qualifications</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Validation_Date__c</fullName>
        <inlineHelpText>Please choose the date of model validation</inlineHelpText>
        <label>Validation Date</label>
        <type>Date</type>
    </fields>
    <label>Validation</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Validation Record</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Validations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>